data/derived/fa15/progs/unify/prog1879.ml.out
Characters 24-26:
  let _=let (b,a)=padZero l1 l2 in List.combine b a;;
                          ^^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
